--- a/backend/package.json
+++ b/backend/package.json
@@ -24,22 +24,23 @@
   "author": "APTX Team",
   "license": "MIT",
   "dependencies": {
-    "@google-cloud/documentai": "^8.0.0",
-    "@google-cloud/storage": "^7.7.0",
-    "@google-cloud/text-to-speech": "^5.2.0",
+    "@google-cloud/aiplatform": "^5.14.0",
+    "@google-cloud/documentai": "^8.12.0",
+    "@google-cloud/storage": "^7.18.0",
+    "@google-cloud/text-to-speech": "^5.8.1",
     "@google-cloud/vertexai": "^1.1.0",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "firebase-admin": "^12.0.0",
-    "helmet": "^7.1.0",
+    "firebase-admin": "^12.7.0",
+    "helmet": "^7.2.0",
     "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
+    "jsonwebtoken": "^9.0.3",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "redis": "^4.6.12",
     "swagger-jsdoc": "^6.2.8",
