--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -24,3 +24,13 @@ dist-ssr
 *.sw?
 .cursorrules
 
+# Environment variables
+.env
+.env.local
+.env.development
+.env.development.local
+.env.uat
+.env.uat.local
+.env.production
+.env.production.local
+.env.prod
